<resources>
    <string name="app_name" translatable="false">Ruen</string>
    <string name="new_card">New card</string>
    <string name="сards">Cards</string>
    <string name="groups">Groups</string>
    <string name="new_group">New group</string>
    <string name="settings">Settings</string>

    <string name="main_side">Main side</string>
    <string name="reverse_side">Reverse side</string>
    <string name="no_cards_to_repeat">There are no card for repeating</string>
    <string name="start_repeating">Start repeating</string>
    <string name="save">Save</string>
    <string name="group_name">Group name</string>

    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>


    // alert
    <string name="group_alert_delete_title">Delete group: %s?</string>
    <string name="group_alert_delete_message">All the cards of the group are also deleted</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    // notifications
    <string name="time_to_repeat_the_word">Time to repeat the words!</string>
    <string name="notification_default_channel_name">General</string>
    <string name="notification_default_channel_description">A common channel for all notifications</string>

    // текст для кнопок с плейсхолдером
    <string name="dont_know">No\n%s</string>
    <string name="bad_know">Bad\n%s</string>
    <string name="good_know">Know\n%s</string>

    // messages
    <string name="save_card_success">The card is saved</string>
    <string name="no_translations">There isn\'t translations</string>
    <string name="list_of_translation_is_empty">Empty list of translations</string>
    <string name="repeat">Repeat</string>
    <string name="no_internet_connection">No internet connection</string>

    // сокращения для интервалов
    <string name="minutes">m.</string>
    <string name="hours">h.</string>
    <string name="days">d.</string>
    <string name="months">M.</string>
    <string name="years">Y.</string>

    // значения для настроек
    <string name="preference_key_notification_repeat" translatable="false">notification_repeat</string>
    <string name="preference_key_theme" translatable="false">theme</string>
    <string name="setting_theme_values_system" translatable="false">system</string>
    <string name="setting_theme_values_light" translatable="false">light</string>
    <string name="setting_theme_values_light_blue" translatable="false">light_blue</string>
    <string name="setting_theme_values_dark" translatable="false">dark</string>
    <string name="setting_notification_start_hour" translatable="false">9</string>
    <string name="setting_notification_end_hour" translatable="false">20</string>
    <string name="preference_key_notification_start_time" translatable="false">notificationStartHour</string>
    <string name="preference_key_notification_end_time" translatable="false">notificationEndHour</string>

    <string name="as_in_the_system">As in the system</string>
    <string name="light">Light</string>
    <string name="cornflower">Cornflower</string>
    <string name="dark">Dark</string>

    <string name="show_image">Show image</string>
    <string name="image">Image</string>
    <string name="field_word_is_empty">Field \"word\" is empty</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="pieces">pcs</string>



</resources>