<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/appearance">
        <ListPreference
            android:defaultValue="@string/setting_theme_values_system"
            android:entries="@array/setting_theme_title"
            android:entryValues="@array/setting_theme_values"
            android:key="@string/preference_key_theme"
            android:title="@string/theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/preference_key_notification_repeat"
            android:title="@string/repeat" />
        <SeekBarPreference
            android:key="@string/preference_key_notification_start_time"
            android:title="@string/start_time"
            android:defaultValue="@string/setting_notification_start_hour"
            android:max="24" />
        <SeekBarPreference
            android:key="@string/preference_key_notification_end_time"
            android:title="@string/end_time"
            android:defaultValue="@string/setting_notification_end_hour"
            android:max="24" />
    </PreferenceCategory>
</PreferenceScreen>