<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?backgroundPanelColor"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical">

    <EditText
        android:id="@+id/wordView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
        android:layout_marginTop="@dimen/newCard_mainSide_marginTop"
        android:layout_marginBottom="@dimen/newCard_mainSide_marginBottom"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/main_side"
        android:inputType="textPersonName"
        android:padding="@dimen/bottomSheet_editText_paddingVertical"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/bottomSheet_editText_textSize">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/translationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
        android:layout_marginBottom="@dimen/newCard_reverseSize_marginBottom"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/reverse_side"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:padding="@dimen/bottomSheet_editText_paddingVertical"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/bottomSheet_editText_textSize" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/newCard_chipGroup_marginHorizontal"
        android:layout_marginBottom="@dimen/newCard_chipGroup_marginBottom"
        android:background="@android:color/transparent"
        android:fadeScrollbars="true">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/translationContainerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:singleLine="true">

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
        android:layout_marginVertical="@dimen/bottomSheet_saveButton_marginVertical"
        android:padding="@dimen/bottomSheet_saveButton_padding"
        android:text="@string/save"
        android:textAppearance="@style/ButtonTextAppearance"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_400"
        app:cornerRadius="@dimen/bottomSheet_saveButton_corner_radius" />

</LinearLayout>